# py-project-updater

./: .gitignore  README.md  composite_project_pip_install.py  pyproject.toml  requirements-dev.txt
src/py_project_updater/: __init__.py  __main__.py  cli.py  config.py  orchestration.py
src/py_project_updater/models/: __init__.py  package.py  subproject.py  version.py
src/py_project_updater/reporting/: __init__.py  test_mode.py
src/py_project_updater/services/: finder.py  git.py  github_commit.py  pip_installer.py  version_comparator.py
tests/: conftest.py
tests/test_integration/: test_e2e.py
tests/test_models/: test_package.py  test_version.py
tests/test_services/: test_finder.py  test_git.py  test_pip_installer.py  test_version_comparator.py
